// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sources: should display implementation of sources' 1`] = `
"#### Implementation of

[SomeInterface](someinterface.md).[prop](someinterface.md#prop)

#### Defined in

sources.ts:6
"
`;

exports[`Sources: should display inherited sources' 1`] = `
"#### Inherited from

[SomeClass](../classes/someclass.md).[prop](../classes/someclass.md#prop)

#### Defined in

sources.ts:2
"
`;

exports[`Sources: should display overide sources' 1`] = `
"#### Overrides

[SomeClass](../classes/someclass.md).[prop](../classes/someclass.md#prop)

#### Defined in

sources.ts:10
"
`;
